syntax = "proto3";
package simple_service;

service SimpleService {
    rpc Message (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string response = 1;
}
